--- a/lang/aquila-admin-theme-en_GB.po
+++ b/lang/aquila-admin-theme-en_GB.po
@@ -1,180 +1,317 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: guy@designbymito.com\n"
-"POT-Creation-Date: 2017-09-29 16:46+0100\n"
-"PO-Revision-Date: 2017-09-29 16:49+0100\n"
+"Project-Id-Version: Aquila Admin Theme\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2018-11-13 14:47+0000\n"
+"PO-Revision-Date: 2018-11-13 14:54+0000\n"
+"Last-Translator: admin <wp2@designbymito.com>\n"
+"Language-Team: English (UK)\n"
+"Language: en_GB\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.4\n"
-"Language-Team: \n"
-"Last-Translator: \n"
-"Language: en_GB\n"
+"X-Generator: Loco https://localise.biz/"
 
-#: admin/options.php:10 admin/options.php:25
-msgid "Aquila Settings"
-msgstr ""
+#: admin/functions/postToBlog.php:17 admin/functions/postToBlog.php:29
+#: admin/functions/postToBlog.php:30
+msgid "Add Blog Post"
+msgstr "Add Blog Post"
 
-#: admin/options.php:11 admin/widgets/welcomeWidget.php:48
+#: admin/options/registerSettings.php:35
+msgid "Admin bar"
+msgstr "Admin bar"
+
+#: admin/options/registerSettings.php:53
+msgid "Admin Menu Colors"
+msgstr "Admin Menu Colours"
+
+#: admin/functions/postToBlog.php:37
+msgid "All Blog Posts"
+msgstr "All Blog Posts"
+
+#: admin/options/registerSettings.php:11 admin/widgets/welcomeWidget.php:40
 msgid "Aquila"
-msgstr ""
+msgstr "Aquila"
 
-#: admin/options.php:32
-msgid "Show <strong>Adminbar</strong> links?"
-msgstr ""
+#. Name of the plugin
+msgid "Aquila Admin Theme"
+msgstr "Aquila Admin Theme"
 
-#: admin/options.php:40
-msgid "Show Editors <strong>Plugins Support</strong> metabox?"
-msgstr ""
+#: admin/options/createOptionsPage.php:6 admin/options/registerSettings.php:10
+msgid "Aquila Settings"
+msgstr "Aquila Settings"
 
-#: admin/options.php:48
-msgid "Show all other <strong>Dashboard metaboxes</strong>?"
-msgstr ""
+#: admin/adminBar/adminBarLinks.php:69
+msgid "Aquila Support"
+msgstr "Aquila Support"
 
-#: admin/options.php:56
-msgid "Do not rename <strong>Posts</strong> to <strong>Blog</strong>"
-msgstr ""
+#: admin/options/help.php:17
+msgid "Ask a question"
+msgstr "Ask a question"
 
-#: admin/options.php:64
-msgid "Hide <strong>Footer credit</strong> link."
-msgstr ""
+#: admin/functions/postToBlog.php:14 admin/functions/postToBlog.php:27
+#: admin/functions/postToBlog.php:38 admin/functions/postToBlog.php:39
+msgid "Blog"
+msgstr "Blog"
 
-#: admin/options.php:72
-msgid "Show <strong>WordPress Update</strong> notices."
-msgstr ""
+#: admin/functions/postToBlog.php:28 admin/functions/postToBlog.php:32
+msgid "Blog Post"
+msgstr "Blog Post"
 
-#: admin/options.php:85
-msgid "Custom Logo"
-msgstr ""
+#: admin/functions/postToBlog.php:20
+msgid "Blog Tags"
+msgstr "Blog Tags"
 
-#: admin/options.php:92
-msgid "Custom logo"
-msgstr ""
+#: admin/options/callbacks.php:11
+msgid "Choose a custom logo for your admin area."
+msgstr "Choose a custom logo for your admin area."
 
-#: admin/options.php:100
-msgid "Custom logo (square) <br/><em>Used in the \"folded\" menu</em>"
-msgstr ""
-
-#: admin/options.php:113
+#: admin/options/createOptionsPage.php:14 admin/options/registerSettings.php:47
 msgid "Color Scheme"
 msgstr "Colour Scheme"
 
-#: admin/options.php:120
-msgid "Primary Color"
-msgstr "Primary Colour"
+#: admin/options/createOptionsPage.php:13 admin/options/registerSettings.php:41
+msgid "Custom Logo"
+msgstr "Custom Logo"
 
-#: admin/options.php:128
-msgid "Secondary Color"
-msgstr "Secondary Colour"
+#: admin/options/registerSettings.php:121
+msgid "Custom logo"
+msgstr "Custom logo"
 
-#: admin/options.php:136
+#: admin/options/registerSettings.php:128
+msgid "Custom logo (square) <br/><em>Used in the \"folded\" menu</em>"
+msgstr "Custom logo (square) <br/><em>Used in the \"folded\" menu</em>"
+
+#: admin/options/registerSettings.php:29
+msgid "Dashboard"
+msgstr "Dashboard"
+
+#: admin/options/registerSettings.php:82
+msgid "Do not rename <strong>Posts</strong> to <strong>Blog</strong>"
+msgstr "Do not rename <strong>Posts</strong> to <strong>Blog</strong>"
+
+#: admin/options/help.php:62
+msgid "Donate towards this plugin"
+msgstr "Donate towards this plugin"
+
+#: admin/options/help.php:48
+msgid "Download an older version of the plugin."
+msgstr "Download an older version of the plugin."
+
+#: admin/functions/postToBlog.php:31
+msgid "Edit Blog Post"
+msgstr "Edit Blog Post"
+
+#: admin/options/createOptionsPage.php:12
+msgid "General Settings"
+msgstr "General Settings"
+
+#. Author of the plugin
+msgid "Guy Primavera"
+msgstr "Guy Primavera"
+
+#: admin/options/createOptionsPage.php:15
+msgid "Help"
+msgstr "Help"
+
+#: admin/options/registerSettings.php:89
+msgid "Hide <strong>Footer credit</strong> link."
+msgstr "Hide <strong>Footer credit</strong> link."
+
+#. Author URI of the plugin
+msgid "https://guyprimavera.com/"
+msgstr "https://guyprimavera.com/"
+
+#. URI of the plugin
+msgid "https://wordpress.org/plugins/aquila-admin-theme/"
+msgstr "https://wordpress.org/plugins/aquila-admin-theme/"
+
+#: admin/options/help.php:33
+msgid "It's a hub for gits."
+msgstr "It's a hub for gits."
+
+#: admin/options/help.php:28
+msgid "Je voudrais un sandwich."
+msgstr "Je voudrais un sandwich."
+
+#: admin/options/help.php:57
+msgid "Leave a review"
+msgstr "Leave a review"
+
+#: admin/options/help.php:58
+msgid "Let me know what you think!"
+msgstr "Let me know what you think!"
+
+#: admin/widgets/welcomeWidget.php:44
+msgid "Memory Usage"
+msgstr "Memory Usage"
+
+#: admin/options/registerSettings.php:167
 msgid "Menu Background Color"
 msgstr "Menu Background Colour"
 
-#: admin/options.php:310
-msgid "General changes to your admin area."
-msgstr ""
+#: admin/options/registerSettings.php:174
+msgid "Menu Text Color"
+msgstr "Menu Text Colour"
 
-#: admin/options.php:314
-msgid "Choose a custom logo for your admin area."
-msgstr ""
+#: admin/functions/postToBlog.php:35
+msgid "No Blog Posts found"
+msgstr "No Blog Posts found"
 
-#: admin/options.php:318
+#: admin/functions/postToBlog.php:36
+msgid "No Blog Posts found in Trash"
+msgstr "No Blog Posts found in Bin"
+
+#: admin/options/help.php:53
+msgid "On GuyPrimavera.com."
+msgstr "On GuyPrimavera.com."
+
+#: admin/options/help.php:13 admin/options/help.php:43
+msgid "On WordPress.org."
+msgstr "On WordPress.org."
+
+#: admin/widgets/welcomeWidget.php:43
+msgid "PHP"
+msgstr "PHP"
+
+#: admin/functions/pluginList.php:3
+msgid "Plugins Support"
+msgstr "Plugins Support"
+
+#: admin/options/help.php:47
+msgid "Previous versions"
+msgstr "Previous versions"
+
+#: admin/options/registerSettings.php:137
+msgid "Primary Color"
+msgstr "Primary Colour"
+
+#: admin/options/helpers.php:31
+msgid "Remove logo"
+msgstr "Remove logo"
+
+#: admin/functions/postToBlog.php:34
+msgid "Search Blog Posts"
+msgstr "Search Blog Posts"
+
+#: admin/options/registerSettings.php:144
+msgid "Secondary Color"
+msgstr "Secondary Colour"
+
+#: admin/options/help.php:22
+msgid "See the ChangeLog"
+msgstr "See the ChangeLog"
+
+#: admin/options/help.php:8
+msgid "See the features and recent updates."
+msgstr "See the features and recent updates."
+
+#: admin/options/help.php:23
+msgid "See what's changed."
+msgstr "See what's changed."
+
+#: admin/options/callbacks.php:14
 msgid "Select a new color scheme for the admin area."
 msgstr "Select a new colour scheme for the admin area."
 
-#: admin/adminBar/adminBarLinks.php:60
-msgid "WordPress Lessons"
-msgstr ""
+#: admin/options/callbacks.php:17
+msgid "Select colors for the admin menu and admin bar."
+msgstr "Select colours for the admin menu and admin bar."
 
-#: admin/adminBar/adminBarLinks.php:65 admin/adminBar/adminBarLinks.php:77
-#: admin/adminBar/adminBarLinks.php:89
-msgid "_blank"
-msgstr ""
+#: admin/widgets/welcomeWidget.php:42
+msgid "Server IP"
+msgstr "Server IP"
 
-#: admin/adminBar/adminBarLinks.php:72
-msgid "WordPress User Guide"
-msgstr ""
+#: admin/options/registerSettings.php:191
+msgid "Settings"
+msgstr "Settings"
 
-#: admin/adminBar/adminBarLinks.php:84
-msgid "Aquila Support"
-msgstr ""
+#: admin/options/registerSettings.php:105
+msgid "Show <strong>Adminbar</strong> links?"
+msgstr "Show <strong>Adminbar</strong> links?"
 
-#: admin/adminBar/screenLinks.php:12 admin/adminBar/screenLinks.php:22
-msgid "screenLink"
-msgstr ""
+#: admin/options/registerSettings.php:112
+msgid "Show <strong>Full Adminbar</strong> by default on front-end?"
+msgstr "Show <strong>Full Adminbar</strong> by default on front-end?"
 
-#: admin/functions/postToBlog.php:15 admin/functions/postToBlog.php:25
-#: admin/functions/postToBlog.php:36 admin/functions/postToBlog.php:37
-msgid "Blog"
-msgstr ""
+#: admin/options/registerSettings.php:96
+msgid "Show <strong>WordPress Update</strong> notices."
+msgstr "Show <strong>WordPress Update</strong> notices."
 
-#: admin/functions/postToBlog.php:16 admin/functions/postToBlog.php:27
-#: admin/functions/postToBlog.php:28
-msgid "Add Blog Post"
-msgstr ""
+#: admin/options/registerSettings.php:75
+msgid "Show all other <strong>Dashboard metaboxes</strong>?"
+msgstr "Show all other <strong>Dashboard metaboxes</strong>?"
 
-#: admin/functions/postToBlog.php:17
-msgid "Blog Tags"
-msgstr ""
+#: admin/options/registerSettings.php:68
+msgid "Show Editors <strong>Plugins Support</strong> metabox?"
+msgstr "Show Editors <strong>Plugins Support</strong> metabox?"
 
-#: admin/functions/postToBlog.php:26 admin/functions/postToBlog.php:30
-msgid "Blog Post"
-msgstr ""
+#: admin/options/help.php:38
+msgid "Similar to GitHub."
+msgstr "Similar to GitHub."
 
-#: admin/functions/postToBlog.php:29
-msgid "Edit Blog Post"
-msgstr ""
+#: admin/options/help.php:18
+msgid "Something not working? Let me know."
+msgstr "Something not working? Let me know."
 
-#: admin/functions/postToBlog.php:31
-msgid "View Blog Post"
-msgstr ""
+#. Description of the plugin
+msgid "The Aquila Admin Theme"
+msgstr "The Aquila Admin Theme"
 
-#: admin/functions/postToBlog.php:32
-msgid "Search Blog Posts"
-msgstr ""
+#: admin/options/help.php:63
+msgid "This full-version is free to use, but every little helps!"
+msgstr "This full-version is free to use, but every little helps!"
+
+#: admin/options/help.php:27
+msgid "Translate into your language"
+msgstr "Translate into your language"
+
+#: admin/options/helpers.php:30
+msgid "Upload logo"
+msgstr "Upload logo"
 
 #: admin/functions/postToBlog.php:33
-msgid "No Blog Posts found"
-msgstr ""
+msgid "View Blog Post"
+msgstr "View Blog Post"
 
-#: admin/functions/postToBlog.php:34
-msgid "No Blog Posts found in Trash"
-msgstr ""
+#: admin/options/help.php:42
+msgid "View the development log"
+msgstr "View the development log"
 
-#: admin/functions/postToBlog.php:35
-msgid "All Blog Posts"
-msgstr ""
+#: admin/options/help.php:52
+msgid "View the plugin's web page"
+msgstr "View the plugin's web page"
 
-#: admin/widgets/pluginWidget.php:36
+#: admin/options/help.php:32
+msgid "View the source code on GitHub"
+msgstr "View the source code on GitHub"
+
+#: admin/options/help.php:37
+msgid "View the source code on WP Trac"
+msgstr "View the source code on WP Trac"
+
+#: admin/options/help.php:12
+msgid "View the support forum"
+msgstr "View the support forum"
+
+#: admin/options/help.php:7
+msgid "View this plugin on WordPress.org"
+msgstr "View this plugin on WordPress.org"
+
+#: admin/widgets/pluginWidget.php:33
 #, php-format
-msgid "<p>Visible to <a href=\"%s\"><strong>Editors</strong></a></p>"
-msgstr ""
+msgid "Visible to <a href=\"%s\"><strong>Administrators</strong></a> only"
+msgstr "Visible to <a href=\"%s\"><strong>Administrators</strong></a> only"
 
-#: admin/widgets/pluginWidget.php:38
-#, php-format
-msgid "<p>Visible to <a href=\"%s\"><strong>Administrators</strong></a></p>"
-msgstr ""
-
-#: admin/widgets/welcomeWidget.php:47
+#: admin/widgets/welcomeWidget.php:39
 msgid "WordPress"
-msgstr ""
+msgstr "WordPress"
 
-#: admin/widgets/welcomeWidget.php:50
-msgid "Server IP"
-msgstr ""
+#: admin/adminBar/adminBarLinks.php:47
+msgid "WordPress Lessons"
+msgstr "WordPress Lessons"
 
-#: admin/widgets/welcomeWidget.php:51
-msgid "PHP"
-msgstr ""
-
-#: admin/widgets/welcomeWidget.php:52
-msgid "Memory Usage"
-msgstr ""
+#: admin/adminBar/adminBarLinks.php:58
+msgid "WordPress User Guide"
+msgstr "WordPress User Guide"
